--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
   },
   "dependencies": {
     "gatsby": "^1.9.250",
-    "gatsby-link": "^1.6.40"
+    "gatsby-link": "^1.6.44",
+    "gatsby-plugin-feed": "^1.3.22",
+    "gatsby-plugin-offline": "^1.0.16",
+    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-typography": "^1.7.18",
+    "gatsby-remark-copy-linked-files": "^1.5.32",
+    "gatsby-remark-images": "^1.5.63",
+    "gatsby-remark-prismjs": "^2.0.2",
+    "gatsby-remark-responsive-iframe": "^1.4.18",
+    "gatsby-remark-smartypants": "^1.4.12",
+    "gatsby-transformer-remark": "^1.7.41",
+    "gatsby-transformer-sharp": "^1.6.24"
   }
 }
