modified some files

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "gatsby-remark-smartypants": "^1.4.12",
     "gatsby-source-filesystem": "^1.5.36",
     "gatsby-transformer-remark": "^1.7.41",
-    "gatsby-transformer-sharp": "^1.6.24"
+    "gatsby-transformer-sharp": "^1.6.24",
+    "react-icons": "^2.2.7",
+    "typography": "^0.16.17",
+    "typography-theme-github": "^0.15.10"
   }
 }
