--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^1.9.250",
     "gatsby-link": "^1.6.44",
     "gatsby-plugin-feed": "^1.3.22",
+    "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-offline": "^1.0.16",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-typography": "^1.7.18",
@@ -22,6 +23,7 @@
     "gatsby-source-filesystem": "^1.5.36",
     "gatsby-transformer-remark": "^1.7.41",
     "gatsby-transformer-sharp": "^1.6.24",
+    "netlify-cms": "^1.8.4",
     "prismjs": "^1.14.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
