modified many files

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,7 +11,7 @@ collections:
     folder: posts
     create: true
     fields:
-      - { name: path, label: Path }
+      - { name: slug, label: Slug }
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
       - { name: category, label: Category }
