--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
-    "build": "gatsby build",
+    "build": "gatsby build && cp -r public amp && rm amp/*.js amp/*.map amp/*.css amp/*.xml amp/*.json && mv amp public/amp",
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "ampifyjs": "0.0.3",
     "gatsby": "^1.9.250",
     "gatsby-link": "^1.6.44",
     "gatsby-plugin-feed": "^1.3.22",
+    "gatsby-plugin-manifest": "^1.0.24",
     "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-offline": "^1.0.16",
     "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-robots-txt": "^1.0.2",
+    "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-twitter": "^1.0.20",
-    "gatsby-plugin-typography": "^1.7.18",
     "gatsby-remark-copy-linked-files": "^1.5.32",
     "gatsby-remark-images": "^1.5.63",
     "gatsby-remark-prismjs": "^2.0.2",
@@ -25,10 +28,9 @@
     "gatsby-transformer-remark": "^1.7.41",
     "gatsby-transformer-sharp": "^1.6.24",
     "netlify-cms": "^1.8.4",
+    "node-sass": "^4.9.0",
     "prismjs": "^1.14.0",
     "react-helmet": "^5.2.0",
-    "react-icons": "^2.2.7",
-    "typography": "^0.16.17",
-    "typography-theme-github": "^0.15.10"
+    "react-icons": "^2.2.7"
   }
 }
